--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,59 @@
+#wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#wrapper-left {
+    margin-left: 10%;
+}
+
+#divLeft {
+    display: inline-block;
+    width: 40%;
+    height: 100%;
+    background-color: bisque;
+}
+
+#divRight {
+    width: 60%;
+    height: 100%;
+    background-color: cadetblue;
+    float: right;
+}
+
 .inputTag { 
-    width:50px;
-    height:50px;
-    font-size:50px;
+    width:75px;
+    height:75px;
+    font-size:75px;
     text-align: center;
 }
 
 button {
     width:100px;
-    height:50px;
+    height:80px;
     font-size:18px;
     vertical-align: text-bottom;
+    margin-left: 5px;
+    float: right;
 }
 
 #board {
     margin-top: 10px;
+    font-size: 24px;
 }
 
 #pitches {
-    font-size:18px;
+    font-size:24px;
+}
+
+#pitcher {
+    display: inline-block;
+}
+
+#title {
+    font-size: 24px;
+    margin-top: 10%;
 }
