--- a/css/index.css
+++ b/css/index.css
@@ -6,22 +6,15 @@
     height: 100%;
 }
 
-#wrapper-left {
-    margin-left: 10%;
+#content {
+    position: absolute;
+    left:20%;
+    width:60%;
+    height:100%;
 }
 
-#divLeft {
-    display: inline-block;
-    width: 40%;
-    height: 100%;
-    background-color: bisque;
-}
-
-#divRight {
-    width: 60%;
-    height: 100%;
-    background-color: cadetblue;
-    float: right;
+#main {
+    text-align: center;
 }
 
 .inputTag { 
@@ -55,5 +48,4 @@ button {
 
 #title {
     font-size: 24px;
-    margin-top: 10%;
 }
